--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,7 +17,7 @@
   --scroll-thumb-color: hsl(var(--hue-color), 4%, 16%);
   --scroll-thumb-color-alt: hsl(var(--hue-color), 4%, 20%);
   /*========== Font and typography ==========*/
-  --body-font: 'Poppins', sans-serif;
+  --body-font: 'Montserrat', sans-serif;
   --biggest-font-size: 5rem;
   --bigger-font-size: 3.5rem;
   --big-font-size: 2.5rem;
@@ -67,10 +67,9 @@ html {
 }
 
 body {
-  margin: var(--header-height) 0 0 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
-  background-color: var(--body-color);
+  background-color: #FFF;
   color: var(--text-color);
 }
 
@@ -134,106 +133,20 @@ img {
   display: grid;
 }
 
-/*=============== HEADER ===============*/
-.header {
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: var(--z-fixed);
-  background: transparent;
-}
-
-/*=============== NAV ===============*/
-.nav {
-  height: var(--header-height);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.nav__logo {
-  display: flex;
-  width: 1.5rem;
-}
-
-.nav__toggle {
-  font-size: 1.2rem;
-  color: var(--white-color);
-  cursor: pointer;
-}
-
-@media screen and (max-width: 767px) {
-  .nav__menu {
-    position: fixed;
-    background-color: var(--body-color);
-    top: -100%;
-    left: 0;
-    width: 100%;
-    padding: 4rem 0 3rem;
-    transition: .4s;
-  }
-}
-
-.nav__list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  row-gap: 1rem;
-}
-
-.nav__link {
-  color: var(--white-color);
-  font-size: var(--h2-font-size);
-  text-transform: uppercase;
-  font-weight: var(--font-semi-bold);
-  background: var(--text-gradient);
-  color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
-  transition: .4s;
-}
-
-.nav__link:hover {
-  background: var(--white-color);
-  color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
-}
-
-.nav__close {
-  position: absolute;
-  font-size: 1.5rem;
-  top: 1rem;
-  right: 1rem;
-  color: var(--white-color);
-  cursor: pointer;
-}
-
-/* show menu */
-.show-menu {
-  top: 0;
-}
-
-/* Change background header */
-.scroll-header {
-  background-color: var(--body-color);
-}
-
-/* Active link */
-.active-link {
-  background: var(--white-color);
-  color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
-}
-
 /*=============== HOME ===============*/
+#home {
+  background-image: url("../img/hero.svg");
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 85vh;
+}
+
 .home__img {
-  width: 250px;
+  width: 500px !important;
   position: absolute;
-  top: -16rem;
-  right: 1.5rem;
+  left: 50% !important;
+  top: 0% !important;
 }
 
 .home__data {
@@ -242,43 +155,31 @@ img {
 
 .home__header {
   position: relative;
+  width: 100%;
 }
 
-.home__title {
-  position: absolute;
-  top: -4rem;
-  left: 1rem;
-  line-height: 6rem;
-  font-size: var(--biggest-font-size);
-  background: var(--text-gradient);
-  color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
+.home__header img{
+  width: 100%;
 }
 
-.home__subtitle {
-  font-size: var(--big-font-size);
-  margin-bottom: var(--mb-2-5);
-}
 
 .home__title-description {
-  font-size: var(--h3-font-size);
-  font-weight: var(--font-medium);
+  font-weight: 100;
   margin-bottom: var(--mb-1);
+  color: #FFF;
+  text-align: center;
+  margin-top: 70px;
 }
 
 .home__description {
   margin-bottom: var(--mb-2-5);
+  margin-top: 20px;
   line-height: var(--text-line-height);
+  color: #FFF;
+  text-align: center;
 }
 
-.home__price {
-  font-size: var(--h3-font-size);
-  font-weight: var(--font-semi-bold);
-  margin-left: var(--mb-0-75);
-}
-
-/*=============== BUTTONS ===============*/
+/* =============== BUTTONS ===============
 .button {
   display: inline-block;
   background-color: var(--black-color);
@@ -300,7 +201,7 @@ img {
   display: inline-flex;
   align-items: center;
   column-gap: .75rem;
-}
+} */
 
 /*=============== SPONSOR ===============*/
 .sponsor__img {
@@ -526,35 +427,6 @@ img {
   color: var(--text-color-light);
 }
 
-/*=============== SCROLL UP ===============*/
-.scrollup {
-  position: fixed;
-  right: 1rem;
-  bottom: -20%;
-  display: flex;
-  background-color: var(--container-color);
-  border-radius: .25rem;
-  padding: .45rem;
-  opacity: 9;
-  z-index: var(--z-tooltip);
-  transition: .4s;
-}
-
-.scrollup:hover {
-  background-color: var(--black-color);
-  opacity: 1;
-}
-
-.scrollup__icon {
-  color: var(--white-color);
-  font-size: 1.35rem;
-}
-
-/* Show Scroll Up*/
-.show-scroll {
-  bottom: 5rem;
-}
-
 /*=============== SCROLL BAR ===============*/
 ::-webkit-scrollbar {
   width: .60rem;
@@ -667,23 +539,6 @@ img {
   .section {
     padding: 6rem 0 2rem;
   }
-  .nav {
-    height: calc(var(--header-height) + 1.5rem);
-  }
-  .nav__logo {
-    width: 2rem;
-  }
-  .nav__list {
-    flex-direction: row;
-    column-gap: 3.5rem;
-  }
-  .nav__link {
-    font-size: var(--normal-font-size);
-    text-transform: initial;
-  }
-  .nav__toggle, .nav__close {
-    display: none;
-  }
   .home__container {
     position: relative;
     grid-template-columns: repeat(2, 1fr);
@@ -691,6 +546,9 @@ img {
   .home__img {
     top: -9rem;
     left: 4rem;
+  }
+  .home__description,.home__title-description {
+    display: none !important;
   }
   .home__data {
     padding-top: 8rem;
@@ -766,4 +624,8 @@ img {
   .footer__copy {
     margin-top: 9rem;
   }
+}
+
+@media screen and (max-width: 570px) {
+  
 }
